[package]
edition = "2021"
name = "netidx-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.4", default-features = false, features = ["napi4"] }
napi-derive = "2.9.3"
netidx = { version = "0.15.0", default-features = false }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
